html header done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,61 +8,285 @@
 
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="container">
-		
-		<!-- Header -->
-		<div class="header">
-			HEADER
-		</div>
-		<!-- Header END -->
 
-		<!-- Service -->
-		<div class="service">
-			SERVICE
+	<!-- Header -->
+	<div class="header">
+		<!-- Topbar -->
+		<div class="topbar">
+			<p class="topbar__text">Please
+				<a href="#" class="topbar__link">login</a>
+				or
+				<a href="#" class="topbar__link">register </a>
+				to create a new listing</p>
+			<div class="social__media">
+				<svg class="icon social__media-icon">
+					<use xlink:href="img/svg/sprite.svg#icon-facebook"></use>
+				</svg>
+				<svg class="icon social__media-icon">
+					<use xlink:href="img/svg/sprite.svg#icon-twitter"></use>
+				</svg>
+				<svg class="icon social__media-icon">
+					<use xlink:href="img/svg/sprite.svg#icon-google-plus"></use>
+				</svg>
+				<svg class="icon social__media-icon">
+					<use xlink:href="img/svg/sprite.svg#icon-linkedin"></use>
+				</svg>
+			</div>
 		</div>
-		<!-- Service END -->
+		<!-- Topbar END -->
 
-		<!-- Latest Properties -->
-		<div class="latest__properties">
-			LATEST PROPERTIES
+		<!-- Box center -->
+		<div class="box-center">
+			<!-- Logo -->
+			<div class="logo">
+				<img class="logo__img" src="img/logo.png" alt="Logo">
+				<p class="logo__text">RealEstate</p>
+			</div>
+			<!-- Logo END -->
+
+			<!-- Navigation -->
+			<nav class="navigation">
+				<ul class="navigation__item">
+					<!-- Home -->
+					<li class="navigation__list">
+						<a href="#" class="navigation__link">Home</a>
+						<ul role="menu" class="dropdown__menu">
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Prvi</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Drugi</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Treci</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Cetvrti</a>
+							</li>
+						</ul>
+					</li>
+					<!-- Properties -->
+					<li class="navigation__list">
+						<a href="#" class="navigation__link">Properties</a>
+						<ul role="menu" class="dropdown__menu">
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Prvi</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Drugi</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Treci</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Cetvrti</a>
+							</li>
+						</ul>
+					</li>
+					<!-- Submission -->
+					<li class="navigation__list">
+						<a href="#" class="navigation__link">Submission</a>
+						<ul role="menu" class="dropdown__menu">
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Prvi</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Drugi</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Treci</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Cetvrti</a>
+							</li>
+						</ul>
+					</li>
+					<!-- Blog -->
+					<li class="navigation__list">
+						<a href="#" class="navigation__link">Blog</a>
+						<ul role="menu" class="dropdown__menu">
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Prvi</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Drugi</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Treci</a>
+							</li>
+							<li class="dropdown__menu-list">
+								<a href="#" class="dropdown__menu-link">Cetvrti</a>
+							</li>
+						</ul>
+					</li>
+					<!-- Contact -->
+					<li class="navigation__list">
+						<a href="#" class="navigation__link">Contact</a>
+					</li>
+				</ul>
+			</nav>
+			<!-- Navigation END -->
+
+			<!-- Contact -->
+			<div class="header__contact">
+				<p>Get in touch with us</p>
+				<svg class="icon header__contact-icon">
+					<use xlink:href="img/svg/sprite.svg#icon-phone"></use>
+				</svg>
+				<span class="header__contact-number">800-2345-6789</span>
+			</div>
+			<!-- Contact END-->
+
+			<!-- Header Heading -->
+			<div class="header__content">
+				<div class="header__content-1">
+					<h1>Making the Dream of Home Real</h1>
+					<p>There is nothing more powerful or more important than home. That’s why we help people find the house of
+						their dreams or successfully sell their home.</p>
+				</div>
+				<div class="header__content-2">
+					<h1>Making the Dream of Home Real</h1>
+					<p>There is nothing more powerful or more important than home. That’s why we help people find the house of
+						their dreams or successfully sell their home.</p>
+				</div>
+				<div class="header__content-3">
+					<h1>Making the Dream of Home Real</h1>
+					<p>There is nothing more powerful or more important than home. That’s why we help people find the house of
+						their dreams or successfully sell their home.</p>
+				</div>
+				<span>Tacka</span>
+				<span>Tacka</span>
+				<span>Tacka</span>
+			</div>
+			<!-- Header Heading END -->
+
+			<!-- Header Form -->
+			<div class="form__content">
+				<form action="#" class="form"">
+					<h3>Search for properties:</h3>
+					<div class="form__group">
+						<label for="#" class="form__label">span
+							<input type="text" class="form__input" placeholder="Any">
+						</label>
+					</div>
+					<div class="form__group">
+						<label for="#" class="form__label">Property status
+							<input type="text" class="form__input" placeholder="Any">
+						</label>
+					</div>
+					<div class="form__group">
+						<label for="#" class="form__label">Property type
+							<input type="text" class="form__input" placeholder="Any">
+						</label>
+					</div>
+					<div class="form__group">
+						<label for="#" class="form__label">Location
+							<input type="text" class="form__input" placeholder="Any">
+						</label>
+					</div>
+					<!-- Form Group More -->
+					<div class="form__group-more">
+						<div class="form__group-filds">
+						<div class="form__group">
+							<span>Price</span>
+							<span>
+								<input type="text" class="form__input" placeholder="Min">
+								<input type="text" class="form__input" placeholder="Max">
+							</span>
+						</div>
+						<div class="form__group">
+							<span>Bedrooms</span>
+							<span>
+								<input type="text" class="form__input" placeholder="Min">
+								<input type="text" class="form__input" placeholder="Max">
+							</span>
+						</div>
+						<div class="form__group">
+							<span>Bathrooms</span>
+							<span>
+								<input type="text" class="form__input" placeholder="Min">
+								<input type="text" class="form__input" placeholder="Max">
+							</span>
+						</div>
+						<div class="form__group">
+							<span>Area</span>
+							<span>
+								<input type="text" class="form__input" placeholder="Min">
+								<input type="text" class="form__input" placeholder="Max">
+							</span>
+						</div>
+						<div class="form__group">
+							<span>parking spots</span>
+							<span>
+								<input type="text" class="form__input" placeholder="Min">
+								<input type="text" class="form__input" placeholder="Max">
+							</span>
+						</div>
+					</div>
+					<label for="#" class="form__more-toggle">More</label>
+					</div>
+					<!-- Form Group More END -->
+					<button class="btn btn__search">Search</button>
+				</form>
+			</div>
+			<!-- Header Form END -->
+
 		</div>
-		<!-- Latest Properties END -->
+		<!-- Box center END -->
 
-		<!-- Locations -->
-		<div class="locations">
-			LOCATIONS
-		</div>
-		<!-- Locations END -->
+	</div>
+	<!-- Header END -->
 
-		<!-- Featured properties -->
-		<div class="featured__properties">
-			FEATURED PROPERTIES
-		</div>
-		<!-- Featured properties END -->
+	<!-- Service -->
+	<section class="service">
+		SERVICE
+	</section>
+	<!-- Service END -->
 
-		<!-- Testimonials -->
-		<div class="testimonials">
-			TESTIMONIALS
-		</div>
-		<!-- Testimonials END -->
+	<!-- Latest Properties -->
+	<section class="latest__properties">
+		LATEST PROPERTIES
+	</section>
+	<!-- Latest Properties END -->
 
-		<!-- Best Deal Properties -->
-		<div class="bestdeals__properties">
-			BEST DEAL PROPERTIES
-		</div>
-		<!-- Best Deal Properties END -->
+	<!-- Locations -->
+	<section class="locations">
+		LOCATIONS
+	</section>
+	<!-- Locations END -->
 
-		<!-- Agents Content -->
-		<div class="agents__content">
-			AGENTS CONTENT
-		</div>
-		<!-- Agents Content END -->
+	<!-- Featured properties -->
+	<section class="featured__properties">
+		FEATURED PROPERTIES
+	</section>
+	<!-- Featured properties END -->
 
-		<!-- Footer -->
-		<footer class="footer">
-			FOOTER
-		</footer>
-		<!-- Footer END -->
+	<!-- Testimonials -->
+	<section class="testimonials">
+		TESTIMONIALS
+	</section>
+	<!-- Testimonials END -->
+
+	<!-- Best Deal Properties -->
+	<section class="bestdeals__properties">
+		BEST DEAL PROPERTIES
+	</section>
+	<!-- Best Deal Properties END -->
+
+	<!-- Agents Content -->
+	<section class="agents__content">
+		AGENTS CONTENT
+	</section>
+	<!-- Agents Content END -->
+
+	<!-- Footer -->
+	<footer class="footer">
+		FOOTER
+	</footer>
+	<!-- Footer END -->
 
 </body>
+
 </html>
