--- a/index.html
+++ b/index.html
@@ -275,7 +275,49 @@
 
 	<!-- Service -->
 	<section class="service">
-		SERVICE
+    <div class="service__title">
+      <h2 class="heading-2 service__h2">Best Real Estates</h2>
+      <p class="">You need to do is very simple just join us</p>
+    </div>
+    <div class="service__container box-center-4">
+      <div class="service__content">
+        <div class="service__icon">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-home-outline"></use>
+          </svg>
+        </div>
+          <h4 class="heading-4">Finds Your home</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem magnam nulla quas eaque, aperiam cumque!</p>
+      </div>
+      <div class="service__content">
+        <div class="service__icon">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-lock"></use>
+          </svg>
+        </div>
+          <h4 class="heading-4">Finds Your home</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem magnam nulla quas eaque, aperiam cumque!</p>
+      </div>
+      <div class="service__content">
+        <div class="service__icon">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-tools-2"></use>
+          </svg>
+        </div>
+          <h4 class="heading-4">Finds Your home</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem magnam nulla quas eaque, aperiam cumque!</p>
+      </div>
+      <div class="service__content">
+        <div class="service__icon">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-target"></use>
+          </svg>
+        </div>
+          <h4 class="heading-4">Finds Your home</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem magnam nulla quas eaque, aperiam cumque!</p>
+      </div>
+      <img src="img/features.png" alt="" class="features-big-text">
+    </div>
 	</section>
 	<!-- Service END -->
 
