--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 				to create a new listing</p>
 			<div class="social__media-topbar">
 				<a href="#" class="social__media-link">
-				<svg class="icon social__media">
+				<svg class="icon social__media-icon">
 					<use xlink:href="img/svg/sprite.svg#icon-facebook"></use>
 				</svg>
 				</a>
 				<a href="#" class="social__media-link">
-				<svg class="icon social__media">
+				<svg class="icon social__media-icon">
 					<use xlink:href="img/svg/sprite.svg#icon-twitter"></use>
 				</svg>
 				</a>
 				<a href="#" class="social__media-link">
-				<svg class="icon social__media">
+				<svg class="icon social__media-icon">
 					<use xlink:href="img/svg/sprite.svg#icon-linkedin"></use>
 				</svg>
 				</a>
 				<a href="#" class="social__media-link">
-				<svg class="icon social__media">
+				<svg class="icon social__media-icon">
 					<use xlink:href="img/svg/sprite.svg#icon-google-plus"></use>
 				</svg>
 				</a>
@@ -147,10 +147,6 @@
 				<a href="tel:800-2345-6789" class="header__contact-number">800-2345-6789</a>
 			</div>
 			<!-- Contact END-->
-			<!-- <input type="radio" id="s-1" name="slide-group">
-			<label class="testimonial__label" for="s-1">
-				<span class="checkmark testimonial__box--1"></span>
-			</label> -->
 			<!-- Header Heading -->
 			<div class="header__content">
 				<input type="radio" id="s-1" name="slide-group" class="slide__group">
@@ -295,16 +291,16 @@
             <use xlink:href="img/svg/sprite.svg#icon-lock"></use>
           </svg>
         </div>
-          <h4 class="heading-4">Finds Your home</h4>
+          <h4 class="heading-4">Securing the property</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem magnam nulla quas eaque, aperiam cumque!</p>
       </div>
       <div class="service__content">
         <div class="service__icon">
           <svg class="icon">
-            <use xlink:href="img/svg/sprite.svg#icon-tools-2"></use>
+            <use class="icon-tools-2" xlink:href="img/svg/sprite.svg#icon-tools-2"></use>
           </svg>
         </div>
-          <h4 class="heading-4">Finds Your home</h4>
+          <h4 class="heading-4">Furnishing the property</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem magnam nulla quas eaque, aperiam cumque!</p>
       </div>
       <div class="service__content">
@@ -313,7 +309,7 @@
             <use xlink:href="img/svg/sprite.svg#icon-target"></use>
           </svg>
         </div>
-          <h4 class="heading-4">Finds Your home</h4>
+          <h4 class="heading-4">Providing legal support</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem magnam nulla quas eaque, aperiam cumque!</p>
       </div>
       <img src="img/features.png" alt="" class="features-big-text">
@@ -322,8 +318,269 @@
 	<!-- Service END -->
 
 	<!-- Latest Properties -->
-	<section class="latest__properties">
-		LATEST PROPERTIES
+	<section class="latest__properties ">
+		<div class="latest__properties-title">
+      <h2 class="heading-2">Latest Real Estate</h2>
+      <p>Find the latest homes for sale, property news & real estate market data</p>
+    </div>
+    <div class="box-center-4">
+    <div class="latest__properties-card card">
+      <!-- Card IMG -->
+      <div class="card__img">
+        <img src="img/livingroom-1-min.jpg" alt="Living room" class="card__img-img scale__img">
+        <div class="card__img-price">
+          <span>House</span>
+        </div>
+        <div class="card__img-status">
+          <span>Featured</span>
+        </div>
+        <div class="card__img-ribbon">
+          <span>Rent</span>
+        </div>
+      </div>
+      <!-- Card IMG END -->
+
+      <!-- Card CONTENT -->
+      <div class="card__content">
+        <h4 class="heading-4 card__content-title"><a href="#">Via della Conciliazione</a></h4>
+        <div class="card__content-location">
+          <svg class="icon card__content-icon">
+            <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <span>Via della Conciliazione, Italy</span>
+        </div>
+
+        <div class="card__content-box card__content-box--1">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-web"></use>
+            </svg>
+            <span>2</span>
+          </div>
+          <span>Rooms</span>
+        </div>
+
+        <div class="card__content-box card__content-box--2">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-single_bed"></use>
+            </svg>
+            <span>1</span>
+          </div>
+          <span>Bedrooms</span>
+        </div>
+
+        <div class="card__content-box card__content-box--3">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-bath"></use>
+            </svg>
+            <span>2</span>
+          </div>
+          <span>Bath</span>
+        </div>
+
+        <button class="btn-card">Browse</button>
+
+      </div>
+      <!-- Card CONTENT END-->
+    </div>
+    
+    <div class="latest__properties-card card">
+      <!-- Card IMG -->
+      <div class="card__img">
+        <button class="btn__slide btn__slide--1 js__slide-1">&#10094;</button>
+        <img src="img/bathroom-1-min.jpg" alt="Bathroom" class="card__img-img slide-img fade">
+        <img src="img/bedroom-2-min.jpg" alt="Bedroom" class="card__img-img slide-img fade">
+        <img src="img/livingroom-2-min.jpg" alt="Living room" class="card__img-img slide-img fade">
+        <div class="card__img-price">
+          <span>Apartment</span>
+        </div>
+        <!-- <div class="card__img-status">
+          <span>Featured</span>
+        </div> -->
+        <div class="card__img-ribbon">
+          <span>Rent</span>
+        </div>
+        <button class="btn__slide btn__slide--2 js__slide-1">&#10095;</button>
+      </div>
+      <!-- Card IMG END -->
+
+      <!-- Card CONTENT -->
+      <div class="card__content">
+        <h4 class="heading-4 card__content-title"><a href="#">Carnaby Street</a></h4>
+        <div class="card__content-location">
+          <svg class="icon card__content-icon">
+            <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <span>Carnaby Street, London</span>
+        </div>
+
+        <div class="card__content-box card__content-box--1">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-web"></use>
+            </svg>
+            <span>2</span>
+          </div>
+          <span>Rooms</span>
+        </div>
+
+        <div class="card__content-box card__content-box--2">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-single_bed"></use>
+            </svg>
+            <span>1</span>
+          </div>
+          <span>Bedrooms</span>
+        </div>
+
+        <div class="card__content-box card__content-box--3">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-bath"></use>
+            </svg>
+            <span>1</span>
+          </div>
+          <span>Bath</span>
+        </div>
+
+        <button class="btn-card">Browse</button>
+
+      </div>
+      <!-- Card CONTENT END-->
+    </div>
+    
+    <div class="latest__properties-card card">
+      <!-- Card IMG -->
+      <div class="card__img">
+        <img src="img/livingroom-3-min.jpg" alt="Living room" class="card__img-img scale__img">
+        <div class="card__img-price">
+          <span>House</span>
+        </div>
+        <div class="card__img-status">
+          <span>Featured</span>
+        </div>
+        <div class="card__img-ribbon">
+          <span>Rent</span>
+        </div>
+      </div>
+      <!-- Card IMG END -->
+
+      <!-- Card CONTENT -->
+      <div class="card__content">
+        <h4 class="heading-4 card__content-title"><a href="#">Rue de Rivoli Street</a></h4>
+        <div class="card__content-location">
+          <svg class="icon card__content-icon">
+            <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <span>91 Rue de Rivoli, Paris</span>
+        </div>
+
+        <div class="card__content-box card__content-box--1">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-web"></use>
+            </svg>
+            <span>2</span>
+          </div>
+          <span>Rooms</span>
+        </div>
+
+        <div class="card__content-box card__content-box--2">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-single_bed"></use>
+            </svg>
+            <span>1</span>
+          </div>
+          <span>Bedrooms</span>
+        </div>
+
+        <div class="card__content-box card__content-box--3">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-bath"></use>
+            </svg>
+            <span>1</span>
+          </div>
+          <span>Bath</span>
+        </div>
+
+        <button class="btn-card">Browse</button>
+
+      </div>
+      <!-- Card CONTENT END-->
+    </div>
+
+    <div class="latest__properties-card card">
+      <!-- Card IMG -->
+      <div class="card__img">
+        <button class="btn__slide btn__slide--1 js__slide-2">&#10094;</button>
+        <img src="img/bathroom-2-min.jpg" alt="Bathroom" class="card__img-img slide-img--2 fade">
+        <img src="img/bedroom-1-min.jpg" alt="Bedroom" class="card__img-img slide-img--2 fade">
+        <img src="img/livingroom-4-min.jpg" alt="Living room" class="card__img-img slide-img--2 fade">
+        <div class="card__img-price">
+          <span>Building area</span>
+        </div>
+        <!-- <div class="card__img-status">
+          <span>Featured</span>
+        </div> -->
+        <div class="card__img-ribbon">
+          <span>Rent</span>
+        </div>
+        <button class="btn__slide btn__slide--2 js__slide-2">&#10095;</button>
+      </div>
+      <!-- Card IMG END -->
+
+      <!-- Card CONTENT -->
+      <div class="card__content">
+        <h4 class="heading-4 card__content-title"><a href="#">Houston Street</a></h4>
+        <div class="card__content-location">
+          <svg class="icon card__content-icon">
+            <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <span>Houston Street, New York</span>
+        </div>
+
+        <div class="card__content-box card__content-box--1">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-web"></use>
+            </svg>
+            <span>4</span>
+          </div>
+          <span>Rooms</span>
+        </div>
+
+        <div class="card__content-box card__content-box--2">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-single_bed"></use>
+            </svg>
+            <span>1</span>
+          </div>
+          <span>Bedrooms</span>
+        </div>
+
+        <div class="card__content-box card__content-box--3">
+          <div>
+            <svg class="icon card__content-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-bath"></use>
+            </svg>
+            <span>1</span>
+          </div>
+          <span>Bath</span>
+        </div>
+
+        <button class="btn-card">Browse</button>
+
+      </div>
+      <!-- Card CONTENT END-->
+    </div>
+
+  </div>
 	</section>
 	<!-- Latest Properties END -->
 
@@ -360,9 +617,10 @@
 	<!-- Footer -->
 	<footer class="footer">
 		FOOTER
-	</footer>
+	</footer>s
 	<!-- Footer END -->
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 
 </html>
