--- a/index.html
+++ b/index.html
@@ -586,7 +586,78 @@
 
 	<!-- Locations -->
 	<section class="locations">
-		LOCATIONS
+		<div class="locations__title">
+      <h2 class="heading-2">Latest Real Estate</h2>
+      <p>Find the latest homes for sale, property news & real estate market data</p>
+    </div>
+    <div class="box-center-3">
+      <div class="locations__card locations__card--1">
+        <a href="#" class="locations__h4">London</a>
+        <span class=locations__listing>5 listings</span>
+        <div class="locations__state">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <a href="#">England</a>
+        </div>
+      </div>
+
+      <div class="locations__card locations__card--2">
+        <a href="#" class="heading-4 locations__h4">Rome</a>
+        <span class=locations__listing>7 listings</span>
+        <div class="locations__state">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <a href="#">Italy</a>
+        </div>
+      </div>
+
+      <div class="locations__card locations__card--3">
+        <a href="#" class="heading-4 locations__h4">Tokyo</a>
+        <span class=locations__listing>12 listings</span>
+        <div class="locations__state">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <a href="#">Japan</a>
+        </div>
+      </div>
+
+      <div class="locations__card locations__card--4">
+        <a href="#" class="heading-4 locations__h4">Paris</a>
+        <span class=locations__listing>3 listings</span>
+        <div class="locations__state">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <a href="#">France</a>
+        </div>
+      </div>
+
+      <div class="locations__card locations__card--5">
+        <a href="#" class="heading-4 locations__h4">New York City</a>
+        <span class=locations__listing>14 listings</span>
+        <div class="locations__state">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <a href="#">United States</a>
+        </div>
+      </div>
+
+      <div class="locations__card locations__card--6">
+        <a href="#" class="heading-4 locations__h4">Dubai</a>
+        <span class=locations__listing>3 listings</span>
+        <div class="locations__state">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <a href="#">United Arab</a>
+        </div>
+      </div>
+
+    </div>
 	</section>
 	<!-- Locations END -->
 
