--- a/index.html
+++ b/index.html
@@ -1089,8 +1089,69 @@
 	<!-- Best Deal Properties END -->
 
 	<!-- Agents Content -->
-	<section class="agents__content">
-		AGENTS CONTENT
+	<section class="agents">
+		<div class="agents-title">
+      <h2 class="heading-2">Our Representatives</h2>
+      <p>Our team is ready to help you reach your real estate goals</p>
+    </div>
+    <div class="box-center-3">
+      <div class="agents__box">
+        <div class="agents__img">
+          <img src="img/user-1.jpg" alt="User 1">
+        </div>
+        <div class="agents__content">
+          <h4 class="heading-4">
+            <a href="#" class="agents__content-title">Nick Smith</a>
+            <span>Consultant</span>
+          </h4>
+          <div class="agents__email">
+            <a href="mailto:info@example.com">info@example.com</a>
+          </div>
+          <div class="agents__phone">+123-456-789</div>
+          <div class="agents__web">
+            <a href="mailto:http://example.com">http://example.com</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="agents__box">
+        <div class="agents__img">
+          <img src="img/user-2.jpg" alt="User 2">
+        </div>
+        <div class="agents__content">
+          <h4 class="heading-4">
+            <a href="#" class="agents__content-title">Lucy Miller</a>
+            <span>Manager</span>
+          </h4>
+          <div class="agents__email">
+            <a href="mailto:info@example.com">info@example.com</a>
+          </div>
+          <div class="agents__phone">+123-456-789</div>
+          <div class="agents__web">
+            <a href="mailto:http://example.com">http://example.com</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="agents__box">
+        <div class="agents__img">
+          <img src="img/user-3.jpg" alt="User 3">
+        </div>
+        <div class="agents__content">
+          <h4 class="heading-4">
+            <a href="#" class="agents__content-title">Marry Thomsan</a>
+            <span>Director</span>
+          </h4>
+          <div class="agents__email">
+            <a href="mailto:info@example.com">info@example.com</a>
+          </div>
+          <div class="agents__phone">+123-456-789</div>
+          <div class="agents__web">
+            <a href="mailto:http://example.com">http://example.com</a>
+          </div>
+        </div>
+      </div>
+    </div>
 	</section>
 	<!-- Agents Content END -->
 
