--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Real Estate</title>
+  <title>Real Estate</title>
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="img/fev/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/fev/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/fev/favicon-16x16.png">
+  <link rel="manifest" href="img/fev/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  
 	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Caveat+Brush&family=Nunito:wght@400;700;800&family=Poppins:wght@700&display=swap" rel="stylesheet">
 	
 	<link rel="stylesheet" href="css/style.css">
@@ -1157,8 +1165,161 @@
 
 	<!-- Footer -->
 	<footer class="footer">
-		FOOTER
-	</footer>s
+		<div class="box-center-4 footer__box">
+      <!-- Info -->
+      <div class="footer__info">
+        <img class="footer__logo" src="img/logo-small.png" alt="Logo small">
+        <p class="footer__title">Real Estate - Big Dreams</p>
+        <p>96 Main Street, Rivoli</p>
+        <div class="footer__phone">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-phone"></use>
+          </svg>
+          <span>Tel: <a href="tel:+123-456-789">+123-456-789</a></span>
+        </div>
+        
+        <div class="footer__email">
+          <svg class="icon">
+            <use xlink:href="img/svg/sprite.svg#icon-envelope"></use>
+          </svg>
+          <span>Email: <a href="mailto:info@example.com">info@example.com</a></span>
+        </div>
+
+        <div class="social__media">
+          <a href="#" class="social__media-link">
+          <svg class="icon social__media-icon">
+            <use xlink:href="img/svg/sprite.svg#icon-facebook"></use>
+          </svg>
+          </a>
+          <a href="#" class="social__media-link">
+          <svg class="icon social__media-icon">
+            <use xlink:href="img/svg/sprite.svg#icon-twitter"></use>
+          </svg>
+          </a>
+          <a href="#" class="social__media-link">
+          <svg class="icon social__media-icon">
+            <use xlink:href="img/svg/sprite.svg#icon-linkedin"></use>
+          </svg>
+          </a>
+          <a href="#" class="social__media-link">
+          <svg class="icon social__media-icon">
+            <use xlink:href="img/svg/sprite.svg#icon-google-plus"></use>
+          </svg>
+          </a>
+        </div>
+      </div>
+      <!-- Info END-->
+
+      <!-- Locations -->
+      <div class="footer__locations">
+        <h4 class="heading-4">Locations</h4>
+        <ul class="footer__item">
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">New York City / Manhattan</a>
+          </li>
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">England / London</a>
+          </li>
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">France / Paris</a>
+          </li>
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">Italy / Rome</a>
+          </li>
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">Dubai / United Arab</a>
+          </li>
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">Tokyo / Japan</a>
+          </li>
+        </ul>
+      </div>
+      <!-- Locations END -->
+
+      <!-- Categories -->
+      <div class="footer__categories">
+        <h4 class="heading-4">Categories</h4>
+        <ul class="footer__item">
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">Landowners‎</a>
+          </li>
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">Land Administration</a>
+          </li>
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">Construction</a>
+          </li>
+        </ul>
+      </div>
+      <!-- Categories END -->
+
+      <!-- Quick Links -->
+      <div class="footer__quick">
+        <h4 class="heading-4">Quick Links</h4>
+        <ul class="footer__item">
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">About Realest</a>
+          </li>
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">Listings Quality Policy</a>
+          </li>
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">France / Paris</a>
+          </li>
+          <li class="footer__list">
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">Submit Your Listings</a>
+          </li>
+          <li class="footer__list"i>
+            <svg class="icon social__media-icon">
+              <use xlink:href="img/svg/sprite.svg#icon-hand-o-right"></use>
+            </svg>
+            <a href="#">Ask a question</a>
+          </li>
+        </ul>
+      </div>
+      <!-- Quick Links END -->
+    </div>
+    <p class="copyright">&copy; 2020 by <a href="https://www.milosminda.com" target="_blank">Milosminda</a>. All rights reserved.</p>
+	</footer>
 	<!-- Footer END -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="js/main.js"></script>
